# refstore

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  refstore.toml
src/: error.rs  main.rs
src/cli/: add.rs  bundle.rs  config.rs  info.rs  init.rs  install_mcp.rs  list.rs  mcp.rs  mod.rs  registry.rs  remove.rs  repo.rs  search.rs  self_ref.rs  status.rs  store.rs  sync.rs  versions.rs
src/git/: mod.rs
src/mcp/: mod.rs  tools.rs
src/model/: bundle.rs  config.rs  manifest.rs  mod.rs  reference.rs  registry.rs  repository.rs
src/store/: mod.rs  project.rs  registry.rs  repository.rs
tests/integration/: cli_bundle.rs  cli_config.rs  cli_project.rs  cli_registry.rs  cli_repo.rs  cli_sync_filter.rs  cli_versions.rs  common.rs  main.rs
