[package]
name = "refstore"
version = "0.1.0"
edition = "2024"
description = "Reference documentation manager for LLM coding agents"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "refstore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.15", features = ["transport-io"] }
dirs = "6"
walkdir = "2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
