[package]
name = "refstore"
version = "0.1.0"
edition = "2024"
description = "Reference documentation manager for LLM coding agents"
license = "MIT"
rust-version = "1.91"

[[bin]]
name = "refstore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.1"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.15", features = ["transport-io"] }
dirs = "6"
walkdir = "2"
globset = "0.4"
thiserror = "2"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
